--- a/star-wars-blog/src/styles/Account.scss
+++ b/star-wars-blog/src/styles/Account.scss
@@ -162,11 +162,14 @@ input {
 			outline: 1px solid gainsboro;
 		}
 	}
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	gap: 40px;
-	align-items: center;
+	& {
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		gap: 40px;
+		align-items: center;
+	}
+	
 }
 .account-file-input[type="file"] {
 	position: absolute;
