--- a/star-wars-blog/src/styles/Footer.scss
+++ b/star-wars-blog/src/styles/Footer.scss
@@ -1,5 +1,5 @@
 .footer {
-	width: 80%;
+	width: calc(80% - 2px);
 	height: fit-content;
 	margin-left: auto;
 	margin-right: auto;
@@ -8,6 +8,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	overflow: hidden;
 }
 .footer-content {
 	width: 100%;
@@ -58,7 +59,17 @@
 /* Ici : media queries pour la seconde partie tablette */
 @media screen and (max-width: 991px) {
 	.footer {
-		width: 100%;
+		width: calc(100% - 2px)
+	}
+	.footer-content {
+		h3 {
+			font-size: 14px;
+		}
+		ul {
+			li {
+				font-size: 12px;
+			}
+		}
 	}
 }
 
